welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: '(' expected but identifier found.
    if lookingFor==tableau[i] {
       ^indexOfValue:8: error: illegal start of simple expression
  }
  ^