welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  for (i <- 0 to tab.length - 1) {
    if lookingFor==tableau[i] {
      return i
    } else {
      return -1
    }
  }
}